// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a project 1`] = `
[
  ".gitignore",
  ".vscode",
  ".vscode/extensions.json",
  ".vscode/launch.json",
  "README.md",
  "astro.config.ts",
  "icons",
  "icons/languages",
  "icons/languages/css.svg",
  "icons/languages/html.svg",
  "icons/languages/js.svg",
  "icons/languages/json.svg",
  "icons/languages/markdown.svg",
  "icons/languages/sass.svg",
  "icons/languages/ts.svg",
  "package.json",
  "public",
  "public/favicon.svg",
  "public/logo-dark.svg",
  "public/logo.svg",
  "src",
  "src/content",
  "src/content/config.ts",
  "src/content/tutorial",
  "src/content/tutorial/1-basics",
  "src/content/tutorial/1-basics/1-introduction",
  "src/content/tutorial/1-basics/1-introduction/1-welcome",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test/bar.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/content.md",
  "src/content/tutorial/1-basics/1-introduction/2-foo",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar/styles.css",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/unicorn.js",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/windows_xp.png",
  "src/content/tutorial/1-basics/1-introduction/2-foo/content.mdx",
  "src/content/tutorial/1-basics/1-introduction/3-bar",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/3-bar/content.md",
  "src/content/tutorial/1-basics/1-introduction/meta.md",
  "src/content/tutorial/1-basics/2-foo",
  "src/content/tutorial/1-basics/2-foo/1-welcome",
  "src/content/tutorial/1-basics/2-foo/1-welcome/content.md",
  "src/content/tutorial/1-basics/2-foo/meta.md",
  "src/content/tutorial/1-basics/meta.md",
  "src/content/tutorial/2-advanced",
  "src/content/tutorial/2-advanced/1-unicorn",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome/content.md",
  "src/content/tutorial/2-advanced/1-unicorn/meta.md",
  "src/content/tutorial/2-advanced/meta.md",
  "src/content/tutorial/meta.md",
  "src/env.d.ts",
  "src/templates",
  "src/templates/default",
  "src/templates/default/package-lock.json",
  "src/templates/default/package.json",
  "src/templates/default/src",
  "src/templates/default/src/index.js",
  "src/templates/vite-app",
  "src/templates/vite-app/.gitignore",
  "src/templates/vite-app/counter.js",
  "src/templates/vite-app/index.html",
  "src/templates/vite-app/javascript.svg",
  "src/templates/vite-app/main.js",
  "src/templates/vite-app/package-lock.json",
  "src/templates/vite-app/package.json",
  "src/templates/vite-app/public",
  "src/templates/vite-app/public/vite.svg",
  "src/templates/vite-app/style.css",
  "tsconfig.json",
  "uno.config.ts",
]
`;

exports[`create and build a project 1`] = `
[
  "1-basics",
  "1-basics-1-introduction-1-welcome-files.json",
  "1-basics-1-introduction-1-welcome-solution.json",
  "1-basics-1-introduction-2-foo-files.json",
  "1-basics-1-introduction-3-bar-files.json",
  "1-basics/2-foo",
  "1-basics/2-foo/1-welcome",
  "1-basics/2-foo/1-welcome/index.html",
  "1-basics/custom-chapter-slug",
  "1-basics/custom-chapter-slug/1-welcome",
  "1-basics/custom-chapter-slug/1-welcome/index.html",
  "1-basics/custom-chapter-slug/bar",
  "1-basics/custom-chapter-slug/bar/index.html",
  "1-basics/custom-chapter-slug/foo",
  "1-basics/custom-chapter-slug/foo/index.html",
  "2-advanced",
  "2-advanced/1-unicorn",
  "2-advanced/1-unicorn/1-welcome",
  "2-advanced/1-unicorn/1-welcome/index.html",
  "favicon.svg",
  "index.html",
  "logo-dark.svg",
  "logo.svg",
  "template-default.json",
  "template-vite-app.json",
]
`;

exports[`create and eject a project 1`] = `
[
  ".gitignore",
  ".vscode",
  ".vscode/extensions.json",
  ".vscode/launch.json",
  "README.md",
  "astro.config.ts",
  "icons",
  "icons/languages",
  "icons/languages/css.svg",
  "icons/languages/html.svg",
  "icons/languages/js.svg",
  "icons/languages/json.svg",
  "icons/languages/markdown.svg",
  "icons/languages/sass.svg",
  "icons/languages/ts.svg",
  "package-lock.json",
  "package.json",
  "public",
  "public/favicon.svg",
  "public/logo-dark.svg",
  "public/logo.svg",
  "src",
  "src/components",
  "src/components/Header.astro",
  "src/components/LoginButton.tsx",
  "src/components/Logo.astro",
  "src/components/NavCard.astro",
  "src/components/NavWrapper.tsx",
  "src/components/ResizablePanel.astro",
  "src/components/ThemeSwitch.tsx",
  "src/components/TutorialContent.astro",
  "src/components/WorkspacePanelWrapper.tsx",
  "src/components/setup.ts",
  "src/components/webcontainer.ts",
  "src/content",
  "src/content/config.ts",
  "src/content/tutorial",
  "src/content/tutorial/1-basics",
  "src/content/tutorial/1-basics/1-introduction",
  "src/content/tutorial/1-basics/1-introduction/1-welcome",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test/bar.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/content.md",
  "src/content/tutorial/1-basics/1-introduction/2-foo",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar/styles.css",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/unicorn.js",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/windows_xp.png",
  "src/content/tutorial/1-basics/1-introduction/2-foo/content.mdx",
  "src/content/tutorial/1-basics/1-introduction/3-bar",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/3-bar/content.md",
  "src/content/tutorial/1-basics/1-introduction/meta.md",
  "src/content/tutorial/1-basics/2-foo",
  "src/content/tutorial/1-basics/2-foo/1-welcome",
  "src/content/tutorial/1-basics/2-foo/1-welcome/content.md",
  "src/content/tutorial/1-basics/2-foo/meta.md",
  "src/content/tutorial/1-basics/meta.md",
  "src/content/tutorial/2-advanced",
  "src/content/tutorial/2-advanced/1-unicorn",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome/content.md",
  "src/content/tutorial/2-advanced/1-unicorn/meta.md",
  "src/content/tutorial/2-advanced/meta.md",
  "src/content/tutorial/meta.md",
  "src/env-default.d.ts",
  "src/env.d.ts",
  "src/layouts",
  "src/layouts/Layout.astro",
  "src/pages",
  "src/pages/[...slug].astro",
  "src/pages/index.astro",
  "src/stores",
  "src/stores/auth-store.ts",
  "src/stores/theme-store.ts",
  "src/styles",
  "src/styles/base.css",
  "src/styles/markdown.css",
  "src/styles/panel.css",
  "src/styles/terminal.css",
  "src/styles/variables.css",
  "src/templates",
  "src/templates/default",
  "src/templates/default/package-lock.json",
  "src/templates/default/package.json",
  "src/templates/default/src",
  "src/templates/default/src/index.js",
  "src/templates/vite-app",
  "src/templates/vite-app/.gitignore",
  "src/templates/vite-app/counter.js",
  "src/templates/vite-app/index.html",
  "src/templates/vite-app/javascript.svg",
  "src/templates/vite-app/main.js",
  "src/templates/vite-app/package-lock.json",
  "src/templates/vite-app/package.json",
  "src/templates/vite-app/public",
  "src/templates/vite-app/public/vite.svg",
  "src/templates/vite-app/style.css",
  "src/utils",
  "src/utils/constants.ts",
  "src/utils/content.ts",
  "src/utils/nav.ts",
  "src/utils/routes.ts",
  "src/utils/workspace.ts",
  "tsconfig.json",
  "uno.config.ts",
]
`;

exports[`create, eject and build a project 1`] = `
[
  "1-basics",
  "1-basics-1-introduction-1-welcome-files.json",
  "1-basics-1-introduction-1-welcome-solution.json",
  "1-basics-1-introduction-2-foo-files.json",
  "1-basics-1-introduction-3-bar-files.json",
  "1-basics/2-foo",
  "1-basics/2-foo/1-welcome",
  "1-basics/2-foo/1-welcome/index.html",
  "1-basics/custom-chapter-slug",
  "1-basics/custom-chapter-slug/1-welcome",
  "1-basics/custom-chapter-slug/1-welcome/index.html",
  "1-basics/custom-chapter-slug/bar",
  "1-basics/custom-chapter-slug/bar/index.html",
  "1-basics/custom-chapter-slug/foo",
  "1-basics/custom-chapter-slug/foo/index.html",
  "2-advanced",
  "2-advanced/1-unicorn",
  "2-advanced/1-unicorn/1-welcome",
  "2-advanced/1-unicorn/1-welcome/index.html",
  "favicon.svg",
  "index.html",
  "logo-dark.svg",
  "logo.svg",
  "template-default.json",
  "template-vite-app.json",
]
`;
